cmake_minimum_required(VERSION 3.15)
project(553Assignment01)

set(CMAKE_CXX_STANDARD 14)

add_executable(553Assignment0101  Feng_Liu_HW1A.cpp)
add_executable(553Assignment0102  Feng_Liu_HW1B.cpp)
add_executable(553Assignment0103  Feng_Liu_HW1C.cpp)
add_executable(553Assignment0104  Feng_Liu_HW1D.cpp)
add_executable(553Assignment0105  Feng_Liu_HW1E.cpp)
