cmake_minimum_required(VERSION 3.15)
project(553Assignment08)

set(CMAKE_CXX_STANDARD 14)

add_executable(553Assignment0701 Feng_Liu_HW6B.cpp)
add_executable(553Assignment0702 examplewritefile.cc)
add_executable(553Assignment0703 main.cpp)
add_executable(553Assignment0704 answer2.cpp)
add_executable(553Assignment0705 answer3.cpp)
add_executable(553Assignment0706 answer4.cpp)