cmake_minimum_required(VERSION 3.15)
project(553assignment04)

set(CMAKE_CXX_STANDARD 14)

add_executable(553assignment0401 Feng_Liu_HW3A_ComplexMath.cpp)
add_executable(553assignment0402 Feng_Liu_HW3C_SolarBody.cpp)
add_executable(553assignment0403 Feng_Liu_HW4A_Fraction.cpp)
add_executable(553assignment0404 testmid.cpp)