cmake_minimum_required(VERSION 3.15)
project(553assignment06)

set(CMAKE_CXX_STANDARD 14)

add_executable(553assignment06 Feng_Liu_HW5A.cpp midterm.cpp test.cpp)
add_executable(553assignment0602 sesson07.cpp)
add_executable(553assignment0603 reviewContainment.cpp)
add_executable(553assignment0604 string.cpp)
add_executable(553assignment0605 test.cpp)